# system-software-lab-4

./: .gitignore  CMakeLists.txt  ast.mmd  grammar.js  input.mylang  main.c  package-lock.json  package.json  parser.exp  parser.lib  readme.md  tree-sitter.json
assembler-code/: main.asm  square.asm
cfg/: main.mmd  square.mmd
lib/tree-sitter/lib/: README.md
src/: grammar.json  node-types.json  parser.c
test_input/: test_assignment.mylang  test_binary_number_expression.mylang  test_if.mylang  test_if_else.mylang  test_loop_while.mylang
utils/common-utils/: common-utils.c  common-utils.h
utils/compiler-utils/assembler-codegen/: codegen.c  types.h
utils/compiler-utils/ast/: ast.c  ast.h
utils/compiler-utils/cfg/: block_manage.c  block_manage.h  cfg.c  cfg.h  expressions.c  expressions.h  loop_context.c  loop_context.h  mermaid.c  mermaid.h  statements.c  statements.h  types.c  types.h  utils.c  utils.h
utils/compiler-utils/semantics-analysis/: functions.c  functions.h  semantics-analysis.c  semantics-analysis.h  symbol.c  symbol.h  types.c  types.h
utils/mermaid-utils/: mermaid-utils.c  mermaid-utils.h
